--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,10 @@ services:
       - POSTGRES_DB=postgres
     volumes:
       - ./scripts:/docker-entrypoint-initdb.d/
+  eureka:
+    image: 'eureka:latest'
+    build:
+      context: eureka
+    container_name: eureka
+    ports:
+      - '8761:8761'
